--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-toastify": "^8.1.0",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
   },
