--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@react-navigation/native": "^6.0.6",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "@typescript-eslint/parser": "^4.15.0",
+    "3.0.0": "^3.0.0",
     "clsx": "^1.1.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -16,8 +18,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
+    "react-native": "^0.67.0",
+    "react-native-gesture-handler": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
+    "react-toastify": "^8.1.0",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
   },
