--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/lab": "^5.0.0-alpha.65",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -14,10 +15,12 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
+    "react-datetime-picker": "^3.4.3",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-toastify": "^8.1.0",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
   },
