--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "lint": "eslint . --fix"
   },
   "eslintConfig": {
-
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
