--- a/package.json
+++ b/package.json
@@ -11,15 +11,14 @@
     "@typescript-eslint/parser": "^4.15.0",
     "clsx": "^1.1.1",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "jwt-decode": "^3.1.2",
-    "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
-  
     "react-toastify": "^8.1.0",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
