--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
+    "react-app": "^1.1.2",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
