--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
+    "react-app": "^1.1.2",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
@@ -33,7 +34,6 @@
     "lint": "eslint . --fix"
   },
   "eslintConfig": {
-    "root": true,
     "extends": [
       "react-app",
       "react-app/jest"
