--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
     "react-toastify": "^8.1.0",
+    "stylehacks": "^5.0.2",
     "tailwindcss": "^3.0.16",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
