--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
+    "react-app": "^1.1.2",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-native": "^0.67.0",
     "react-native-gesture-handler": "^2.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^4.0.2",
+    "react-table": "^7.7.0",
     "react-toastify": "^8.1.0",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
