--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
     "react-app": "^1.1.2",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
