--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "^4.0.2",
     "react-table": "^7.7.0",
     "react-toastify": "^8.1.0",
+    "react-transition-group": "^4.4.2",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
   },
