--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/runtime": "^7.16.7",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/lab": "^5.0.0-alpha.65",
@@ -10,22 +13,25 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "@typescript-eslint/parser": "^4.33.0",
+    "babel": "^6.23.0",
     "clsx": "^1.1.1",
-    "eslint-config-react-app": "^7.0.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
-    "react-datetime-picker": "^3.4.3",
     "react-app": "^1.1.2",
+    "react-datepicker": "^4.6.0",
+    "react-datetime-picker": "^3.4.3",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.2",
+    "react-scripts": "^5.0.0",
     "react-table": "^7.7.0",
     "react-toastify": "^8.1.0",
     "typescript": "^4.1.3",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "webpack": "^5.68.0"
   },
   "scripts": {
     "start": "react-scripts start",
