--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/base": "^5.0.0-alpha.67",
+    "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
     "@mui/system": "^5.4.0",
     "@testing-library/jest-dom": "^5.11.9",
