--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "eslint": "^7.32.0",
     "eslint-config-react-app": "^7.0.0"
   }
