--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sports-apparel-ui",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
   "dependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
