--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "express": "^4.17.2",
     "jest-canvas-mock": "^2.3.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
