--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/runtime": "^7.16.7",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/lab": "^5.0.0-alpha.65",
+    "@mui/material": "^5.4.2",
+    "@mui/styled-engine-sc": "^5.4.2",
     "@react-icons/all-files": "^4.1.0",
     "@react-navigation/native": "^6.0.6",
     "@testing-library/dom": "^8.11.3",
@@ -39,6 +43,7 @@
     "react-scripts": "^5.0.0",
     "react-table": "^7.7.0",
     "react-toastify": "^8.1.0",
+    "styled-components": "^5.3.3",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0",
     "webpack": "^5.68.0"
