--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/runtime": "^7.16.7",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/lab": "^5.0.0-alpha.65",
