--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "@babel/runtime": "^7.16.7",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.4.2",
     "@mui/lab": "^5.0.0-alpha.65",
     "@mui/material": "^5.4.2",
     "@mui/styled-engine-sc": "^5.4.2",
