--- a/package.json
+++ b/package.json
@@ -26,16 +26,20 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "@types/enzyme": "^3.10.11",
     "@typescript-eslint/parser": "^4.33.0",
     "babel": "^6.23.0",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "deps": "^1.0.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "express": "^4.17.2",
     "jest-canvas-mock": "^2.3.1",
     "jwt-decode": "^3.1.2",
+    "legacy": "^0.0.3",
+    "peer": "^0.6.1",
     "react": "^17.0.1",
     "react-app": "^1.1.2",
     "react-bootstrap": "^2.1.1",
